@@ -1,17 +1,10 @@
 package it.polimi.ingsw.server.controller;
 
 import it.polimi.ingsw.network.ServerNetworkHandler;
-import it.polimi.ingsw.server.controller.exceptions.DuplicatePlayerException;
-import it.polimi.ingsw.server.controller.exceptions.FullLobbyException;
-import it.polimi.ingsw.server.controller.exceptions.IllegalOperationForStateException;
-import it.polimi.ingsw.server.controller.save.GameSave;
-import it.polimi.ingsw.server.model.card.Card;
-import it.polimi.ingsw.server.model.card.GoldCard;
-import it.polimi.ingsw.server.model.card.ResourceCard;
-import it.polimi.ingsw.server.model.card.StarterCard;
-import it.polimi.ingsw.server.model.game.GameInfo;
+import it.polimi.ingsw.server.model.card.*;
 import it.polimi.ingsw.server.model.game.GameStatusEnum;
 import it.polimi.ingsw.server.model.player.Player;
+import it.polimi.ingsw.server.model.player.TokenColorEnum;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -32,26 +25,24 @@ public class GameControllerTest {
     private ArrayList<GoldCard> goldCardArray;
     private ArrayList<StarterCard> starterCardArray;
     private ArrayList<ResourceCard> resourceCardArray;
+    private static int id = 50;
 
     @BeforeEach
     void setup() throws IOException {
 
-        serverNetworkHandler = new ServerNetworkHandler("CodexNaturalisServer", 1099, 5001);
+        serverNetworkHandler = new ServerNetworkHandler("CodexNaturalisServer", 1099 + id, 5001);
+        serverNetworkHandler.setDebug(true);
         serverNetworkHandler.start();
 
         gameController = new GameController(serverNetworkHandler);
         gameController.createGame(1);
 
-        gameController.addPlayer("p1");
-        gameController.addPlayer("p2");
-
-        gameController.startGame();
-
         resourceCardArray = new ArrayList<>();
         goldCardArray = new ArrayList<>();
         starterCardArray = new ArrayList<>();
 
-        for(int i = 1; i <= 40; i++) {
+        Deck resourceDeck = new Deck();
+        for (int i = 1; i <= 40; i++) {
             BufferedReader reader = new BufferedReader(new InputStreamReader(Objects.requireNonNull(getClass().getResourceAsStream("/assets/resourcecards/resourceCard" + i + ".json"))));
             StringBuilder stringBuilder = new StringBuilder();
             String line;
@@ -61,9 +52,12 @@ public class GameControllerTest {
             String jsonData = stringBuilder.toString();
             ResourceCard card = new ResourceCard(jsonData);
             resourceCardArray.add(card);
+            resourceDeck.addCard(card);
         }
+        gameController.getGame().getTable().setResourceDeck(resourceDeck);
 
-        for(int i = 1; i <= 40; i++) {
+        Deck goldDeck = new Deck();
+        for (int i = 1; i <= 40; i++) {
             BufferedReader reader = new BufferedReader(new InputStreamReader(Objects.requireNonNull(getClass().getResourceAsStream("/assets/goldcards/goldCard" + i + ".json"))));
             StringBuilder stringBuilder = new StringBuilder();
             String line;
@@ -73,8 +67,11 @@ public class GameControllerTest {
             String jsonData = stringBuilder.toString();
             GoldCard card = new GoldCard(jsonData);
             goldCardArray.add(card);
+            goldDeck.addCard(card);
         }
-        for(int i = 1; i <= 6; i++) {
+        gameController.getGame().getTable().setGoldDeck(goldDeck);
+        Deck starterDeck = new Deck();
+        for (int i = 1; i <= 6; i++) {
             BufferedReader reader = new BufferedReader(new InputStreamReader(Objects.requireNonNull(getClass().getResourceAsStream("/assets/startercards/starterCard" + i + ".json"))));
             StringBuilder stringBuilder = new StringBuilder();
             String line;
@@ -84,8 +81,23 @@ public class GameControllerTest {
             String jsonData = stringBuilder.toString();
             StarterCard card = new StarterCard(jsonData);
             starterCardArray.add(card);
+            starterDeck.addCard(card);
         }
-
+        gameController.getGame().getTable().setStarterDeck(starterDeck);
+        Deck objectiveDeck = new Deck();
+        for (int i = 1; i <= 16; i++) {
+            BufferedReader reader = new BufferedReader(new InputStreamReader(Objects.requireNonNull(getClass().getResourceAsStream("/assets/objectivecards/objectiveCard" + i + ".json"))));
+            StringBuilder stringBuilder = new StringBuilder();
+            String line;
+            while ((line = reader.readLine()) != null) {
+                stringBuilder.append(line);
+            }
+            String jsonData = stringBuilder.toString();
+            ObjectiveCard card = new ObjectiveCard(jsonData);
+            objectiveDeck.addCard(card);
+        }
+        gameController.getGame().getTable().setObjectiveDeck(objectiveDeck);
+        id++;
     }
 
     @AfterEach
@@ -103,8 +115,8 @@ public class GameControllerTest {
     @DisplayName("Test card given ID")
     public void validCardGivenID() {
 
-        Card chosenCard = gameController.getCardById(resourceCardArray.get(0).getId());
-        assertEquals(chosenCard.getId(), resourceCardArray.get(0).getId());
+        ResourceCard chosenCard = resourceCardArray.getFirst();
+        assertEquals(chosenCard.getId(), resourceCardArray.getFirst().getId());
     }
 
     @Test
@@ -119,13 +131,20 @@ public class GameControllerTest {
     @DisplayName("Test valid player controllers")
     public void validPlayerControllers() {
 
-        assertEquals(2, gameController.getPlayerControllers().size());
+        gameController.addPlayer("p1");
+        gameController.addPlayer("p2");
+        gameController.addPlayer("p3");
+        gameController.addPlayer("p4");
+
+        assertEquals(4, gameController.getPlayerControllers().size());
         assertNotNull(gameController.getPlayerController(gameController.getPlayerByNick("p1").orElse(null)));
         assertNotNull(gameController.getPlayerController(gameController.getPlayerByNick("p2").orElse(null)));
+        assertNotNull(gameController.getPlayerController("p3"));
+        assertNotNull(gameController.getPlayerController("p4"));
 
         gameController.removePlayer(gameController.getPlayerByNick("p1").orElse(null));
         assertFalse(gameController.getPlayerControllers().contains(gameController.getPlayerController("p1")));
-        assertEquals(1, gameController.getPlayerControllers().size());
+        assertEquals(3, gameController.getPlayerControllers().size());
 
     }
 
@@ -133,22 +152,55 @@ public class GameControllerTest {
     @DisplayName("Test valid player number")
     public void validPlayerNumber() {
 
+        gameController.addPlayer("p1");
+        gameController.addPlayer("p2");
+
         assertEquals(2, gameController.getGame().getPlayers().size());
         assertEquals(0, gameController.getGame().getOfflinePlayers().size());
+    }
+
+    @Test
+    @DisplayName("Test valid players management")
+    public void validPlayerList() {
+
+        for (int i = 0; i < 4; i++) {
+            gameController.addPlayer("p" + i);
+            if (gameController.getGame().getInfo().getPlayersNumber() != i + 1) {
+                fail("Tried to add a player but the number of players is not correct");
+            }
+            if (!gameController.getGame().getPlayers().get(i).getUsername().equals("p" + i)) {
+                fail("Wrong player added");
+            }
+            assertEquals(gameController.getGame().getPlayers().get(i), gameController.getPlayerByNick("p" + i).orElse(null));
+        }
+
+        gameController.addPlayer("p0");
+        gameController.addPlayer("p4");
+
+        gameController.removePlayer(gameController.getPlayerByNick("p2").orElse(null));
+
+        for (int i = 0; i < gameController.getGame().getInfo().getPlayersNumber(); i++) {
+            assertNotEquals("p2", gameController.getGame().getPlayers().get(i).getUsername());
+        }
+        assertEquals(3, gameController.getGame().getInfo().getPlayersNumber());
+
+        gameController.addPlayer("p2");
+        assertEquals(4, gameController.getGame().getInfo().getPlayersNumber());
+        assertTrue(gameController.getGame().getPlayers().contains(gameController.getPlayerByNick("p2").orElse(null)));
+
     }
 
     @Test
     @DisplayName("Test valid game status")
     public void validGameStatus() {
 
-        gameController.getGame().getInfo().setGameStatus(GameStatusEnum.CHOOSING_COLOR);
-        assertEquals(GameStatusEnum.CHOOSING_COLOR, gameController.getGame().getInfo().getGameStatus());
-
-        gameController.getGame().getInfo().setGameStatus(GameStatusEnum.STARTING);
-        assertEquals(GameStatusEnum.STARTING, gameController.getGame().getInfo().getGameStatus());
-
-        gameController.getGame().getInfo().setGameStatus(GameStatusEnum.WAITING_FOR_PLAYERS);
         assertEquals(GameStatusEnum.WAITING_FOR_PLAYERS, gameController.getGame().getInfo().getGameStatus());
+
+        gameController.addPlayer("p1");
+        gameController.addPlayer("p2");
+
+        gameController.startGame();
+        assertEquals(gameController.getGame().getInfo().getGameStatus(), GameStatusEnum.CHOOSING_COLOR);
 
         gameController.getGame().getInfo().setGameStatus(GameStatusEnum.CHOOSING_STARTER_FACE);
         assertEquals(GameStatusEnum.CHOOSING_STARTER_FACE, gameController.getGame().getInfo().getGameStatus());
@@ -161,11 +213,6 @@ public class GameControllerTest {
 
         gameController.getGame().getInfo().setGameStatus(GameStatusEnum.PLAYING);
         assertEquals(GameStatusEnum.PLAYING, gameController.getGame().getInfo().getGameStatus());
-
-        gameController.endGame();
-
-        assertEquals(GameStatusEnum.ENDING, gameController.getGame().getInfo().getGameStatus());
-
     }
 
     @Test
@@ -175,25 +222,23 @@ public class GameControllerTest {
         int numOfGoldCards = 0;
         int numOfResourceCards = 0;
 
-        gameController.getPlayerByNick("p1").orElse(null).addCardInHand(goldCardArray.get(0));
-        gameController.getPlayerByNick("p1").orElse(null).addCardInHand(resourceCardArray.get(0));
-        gameController.getPlayerByNick("p1").orElse(null).addCardInHand(resourceCardArray.get(1));
+        gameController.addPlayer("p1");
+        gameController.addPlayer("p2");
 
-        for (int i = 0; i < gameController.getPlayerByNick("p1").orElse(null).getCardsInHand().size(); i++) {
-//            for(int j = 0; j < gameController.getPlayerByNick("p1").orElse(null).getCardsInHand().size(); j++) {
-//                if (i != j) {
-//                    assertNotEquals(gameController.getPlayerByNick("p1").orElse(null).getCardsInHand().get(i), gameController.getPlayerByNick("p1").orElse(null).getCardsInHand().get(j));
-//                }
-//            }
-            if (gameController.getPlayerByNick("p1").orElse(null).getCardsInHand().get(i) instanceof GoldCard) {
-                numOfGoldCards++;
-            } else if (gameController.getPlayerByNick("p1").orElse(null).getCardsInHand().get(i) instanceof ResourceCard) {
-                numOfResourceCards++;
+        gameController.startGame();
+
+        for (Player player : gameController.getGame().getPlayers()) {
+            for (int i = 0; i < player.getCardsInHand().size(); i++) {
+                if (player.getCardsInHand().get(i) instanceof GoldCard) {
+                    numOfGoldCards++;
+                } else if (player.getCardsInHand().get(i) instanceof ResourceCard) {
+                    numOfResourceCards++;
+                }
             }
         }
 
-        assertEquals(1, numOfGoldCards);
-        assertEquals(2, numOfResourceCards);
+        assertEquals(2, numOfGoldCards);
+        assertEquals(4, numOfResourceCards);
 
     }
 
@@ -201,42 +246,58 @@ public class GameControllerTest {
     @DisplayName("Test valid first player + turn management")
     public void validFirstPlayer() {
 
-        gameController.startGame();
+        gameController.addPlayer("p1");
+        gameController.addPlayer("p2");
+        Player p1 = gameController.getPlayerByNick("p1").orElse(null);
+        Player p2 = gameController.getPlayerByNick("p2").orElse(null);
+        PlayerController p1Controller = gameController.getPlayerController("p1");
+        PlayerController p2Controller = gameController.getPlayerController("p2");
 
-        gameController.getGame().getInfo().setFirstPlayer(gameController.getPlayerByNick("p1").orElse(null));
-        gameController.getGame().getInfo().setActivePlayer(gameController.getPlayerByNick("p1").orElse(null));
+        p1Controller.chooseToken(TokenColorEnum.RED);
+        p2Controller.chooseToken(TokenColorEnum.BLUE);
+        p1Controller.setStarterCard(starterCardArray.getFirst(), FaceEnum.FRONT);
+        p2Controller.setStarterCard(starterCardArray.get(1), FaceEnum.BACK);
+        p1Controller.chooseObjectiveCard((ObjectiveCard) gameController.getGame().getTable().getObjectiveDeck().drawCard());
+        p2Controller.chooseObjectiveCard((ObjectiveCard) gameController.getGame().getTable().getObjectiveDeck().drawCard());
 
-        assertEquals(gameController.getPlayerByNick("p1").orElse(null), gameController.getGame().getInfo().getFirstPlayer());
-        assertEquals(gameController.getPlayerByNick("p1").orElse(null), gameController.getGame().getInfo().getActivePlayer());
-        assertNotEquals(gameController.getPlayerByNick("p2").orElse(null), gameController.getGame().getInfo().getFirstPlayer());
-        assertNotEquals(gameController.getPlayerByNick("p2").orElse(null), gameController.getGame().getInfo().getActivePlayer());
+        gameController.getGame().getInfo().setFirstPlayer(p1);
+
+        assertEquals(p1, gameController.getGame().getInfo().getFirstPlayer());
+        assertNotEquals(p2, gameController.getGame().getInfo().getFirstPlayer());
 
         gameController.nextTurn();
 
-        assertEquals(gameController.getPlayerByNick("p2").orElse(null), gameController.getGame().getInfo().getActivePlayer());
-        assertNotEquals(gameController.getPlayerByNick("p1").orElse(null), gameController.getGame().getInfo().getActivePlayer());
+        assertEquals(p1, gameController.getGame().getInfo().getActivePlayer());
+        assertEquals(GameStatusEnum.WAITING_FOR_PLAYERS, gameController.getGame().getInfo().getGameStatus());
 
+        gameController.nextTurn();
+
+        assertEquals(p2, gameController.getGame().getInfo().getActivePlayer());
+        assertNotEquals(p1, gameController.getGame().getInfo().getActivePlayer());
     }
 
     @Test
     @DisplayName("Test valid player reconnection")
     public void validPlayerReconnection() {
 
-        gameController.startGame();
-
+        gameController.addPlayer("p1");
+        gameController.addPlayer("p2");
+        Player p1 = gameController.getPlayerController("p1").getPlayer();
         gameController.getGame().getInfo().setGameStatus(GameStatusEnum.PLAYING);
-        gameController.getGame().getInfo().setActivePlayer(gameController.getPlayerByNick("p1").orElse(null));
+        gameController.getGame().getInfo().setActivePlayer(p1);
 
         gameController.onDisconnect("p1");
 
         assertTrue(gameController.hasDisconnected("p1"));
-        assertFalse(gameController.getGame().getPlayers().contains(gameController.getPlayerByNick("p1").orElse(null)));
+        assertFalse(gameController.getGame().getPlayers().contains(p1));
         assertFalse(gameController.getPlayerControllers().contains(gameController.getPlayerController("p1")));
+        assertTrue(gameController.getGame().getOfflinePlayers().contains(p1));
 
         gameController.reconnectPlayer("p1");
 
+        assertTrue(gameController.getGame().getPlayers().contains(p1));
         assertTrue(gameController.getPlayerControllers().contains(gameController.getPlayerController("p1")));
-        assertFalse(gameController.getGame().getOfflinePlayers().contains(gameController.getPlayerByNick("p1").orElse(null)));
+        assertFalse(gameController.getGame().getOfflinePlayers().contains(p1));
 
     }
 
@@ -244,57 +305,11 @@ public class GameControllerTest {
     @DisplayName("Test valid common objective cards")
     public void validCommonObjectives() {
 
+        gameController.assignCommonObjectives();
+
         assertFalse(gameController.getGame().getTable().getObjectiveCards().contains(null));
         assertEquals(2, gameController.getGame().getTable().getObjectiveCards().size());
         assertNotEquals(gameController.getGame().getTable().getObjectiveCards().get(0), gameController.getGame().getTable().getObjectiveCards().get(1));
 
     }
-
-    @Test
-    @DisplayName("Test valid game ending")
-    public void validGameEnding() {
-
-        gameController.startGame();
-
-        gameController.getGame().getInfo().setFirstPlayer(gameController.getPlayerByNick("p1").orElse(null));
-        gameController.getGame().getInfo().setActivePlayer(gameController.getPlayerByNick("p2").orElse(null));
-        gameController.getPlayerController("p1").getPlayer().setScore(69);
-        gameController.getPlayerController("p2").getPlayer().setScore(42);
-        gameController.getGame().getInfo().setGameStatus(GameStatusEnum.LAST_TURN);
-        gameController.checkEndCondition();
-        gameController.endGame();
-
-        assertTrue(gameController.getGame().getInfo().getWinners().contains(gameController.getPlayerController("p1").getPlayer()));
-        assertFalse(gameController.getGame().getInfo().getWinners().contains(gameController.getPlayerController("p2").getPlayer()));
-
-    }
-
-    @Test
-    @DisplayName("Test valid existing game restoring")
-    public void validGameSaveRestoring() {
-
-        gameController.getGame().getInfo().setMaxPlayers(2);
-        gameController.startGame();
-
-        GameInfo oldInfo = gameController.getGame().getInfo();
-
-        gameController.saveGameToFile();
-
-        serverNetworkHandler.stop();
-
-        serverNetworkHandler = new ServerNetworkHandler("CodexNaturalisServer", 1099, 5001);
-        serverNetworkHandler.start();
-        gameController = new GameController(serverNetworkHandler);
-
-        gameController.createGame(1);
-        gameController.getGame().getInfo().setMaxPlayers(2);
-        gameController.addPlayer("p1");
-        gameController.addPlayer("p2");
-
-        gameController.checkStartCondition();
-
-        assertEquals(oldInfo, gameController.getGame().getInfo());
-
-    }
-
 }
